{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 1556,
  "lineage": "cb0dcc32-f595-1dfb-4924-5654dc8315d6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0585428b24315f482",
            "domain": "vpc",
            "id": "eipalloc-0076892ba73424b1a",
            "instance": "i-04d7e191a6b275629",
            "network_interface": "eni-0713f4bfba545eb85",
            "private_dns": "ip-172-16-128-169.us-west-2.compute.internal",
            "private_ip": "172.16.128.169",
            "public_dns": "ec2-44-235-136-94.us-west-2.compute.amazonaws.com",
            "public_ip": "44.235.136.94",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.bastion",
            "aws_key_pair.user_provided_key",
            "aws_security_group.public_servers",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_nat_ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0c8777defdf175fc6",
            "domain": "vpc",
            "id": "eipalloc-072d76b02e58b34c1",
            "network_interface": "eni-0482537dd95f9cdb9",
            "private_dns": "ip-172-16-128-119.us-west-2.compute.internal",
            "private_ip": "172.16.128.119",
            "public_dns": "ec2-54-148-198-19.us-west-2.compute.amazonaws.com",
            "public_ip": "54.148.198.19",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c2c50437d0b80d",
            "arn": "arn:aws:ec2:us-west-2:777829610915:instance/i-04d7e191a6b275629",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04d7e191a6b275629",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "key_name": "user_provided_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0713f4bfba545eb85",
            "private_dns": "ip-172-16-128-169.us-west-2.compute.internal",
            "private_ip": "172.16.128.169",
            "public_dns": "ec2-44-235-136-94.us-west-2.compute.amazonaws.com",
            "public_ip": "44.235.136.94",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:777829610915:key/06f62793-389d-48b6-b661-7cb130b25b55",
                "volume_id": "vol-0ab43a4e4f6a4c1d8",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c6dc3bc5f09ea7e9",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0957160f0aa1f1d3a"
            ]
          },
          "dependencies": [
            "aws_key_pair.user_provided_key",
            "aws_security_group.public_servers",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ca_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00f4b9641119301bf",
            "arn": "arn:aws:ec2:us-west-2:777829610915:instance/i-0cbfb0a383657c55d",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cbfb0a383657c55d",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "key_name": "user_provided_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e2c7290bec477123",
            "private_dns": "ip-172-16-6-162.us-west-2.compute.internal",
            "private_ip": "172.16.6.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:777829610915:key/06f62793-389d-48b6-b661-7cb130b25b55",
                "volume_id": "vol-021762364c3ece541",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7eea7d88a817a96",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03753e5e56b8a9fbb",
              "sg-03c8b28801fd386b8"
            ]
          },
          "dependencies": [
            "aws_key_pair.user_provided_key",
            "aws_security_group.private_intraconnected",
            "aws_security_group.private_servers",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "log_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c2c50437d0b80d",
            "arn": "arn:aws:ec2:us-west-2:777829610915:instance/i-080aa196a390ee8d1",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-080aa196a390ee8d1",
            "instance_state": "running",
            "instance_type": "t3a.micro",
            "ipv6_address_count": 0,
            "key_name": "user_provided_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f3d14c6a939ab53f",
            "private_dns": "ip-172-16-74-136.us-west-2.compute.internal",
            "private_ip": "172.16.74.136",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:777829610915:key/06f62793-389d-48b6-b661-7cb130b25b55",
                "volume_id": "vol-06846aa1bdbe369f3",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7eea7d88a817a96",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03753e5e56b8a9fbb",
              "sg-03c8b28801fd386b8"
            ]
          },
          "dependencies": [
            "aws_key_pair.user_provided_key",
            "aws_security_group.private_intraconnected",
            "aws_security_group.private_servers",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "vault_server",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c2c50437d0b80d",
            "arn": "arn:aws:ec2:us-west-2:777829610915:instance/i-0c11f8a9e8104daae",
            "associate_public_ip_address": false,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "vault_dynamodb",
            "id": "i-0c11f8a9e8104daae",
            "instance_state": "running",
            "instance_type": "t3a.nano",
            "ipv6_address_count": 0,
            "key_name": "user_provided_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0bf89982f943a0d4a",
            "private_dns": "ip-172-16-109-253.us-west-2.compute.internal",
            "private_ip": "172.16.109.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-west-2:777829610915:key/06f62793-389d-48b6-b661-7cb130b25b55",
                "volume_id": "vol-0a5b0d6d3507978e9",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a7eea7d88a817a96",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-03753e5e56b8a9fbb",
              "sg-03c8b28801fd386b8"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.vault_dynamodb",
            "aws_key_pair.user_provided_key",
            "aws_security_group.private_intraconnected",
            "aws_security_group.private_servers",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "playground_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0af31996e79a33d9f",
            "owner_id": "777829610915",
            "tags": {
              "Name": "playground gateway"
            },
            "vpc_id": "vpc-034aa7bace1ed8b5b"
          },
          "dependencies": [
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-072d76b02e58b34c1",
            "id": "nat-09268377c2d4e5b71",
            "network_interface_id": "eni-0482537dd95f9cdb9",
            "private_ip": "172.16.128.119",
            "public_ip": "54.148.198.19",
            "subnet_id": "subnet-0c6dc3bc5f09ea7e9",
            "tags": {
              "Name": "public nat"
            }
          },
          "dependencies": [
            "aws_eip.public_nat_ip",
            "aws_internet_gateway.playground_gateway",
            "aws_subnet.public",
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_private_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b716fb8f1baf5de0",
            "owner_id": "777829610915",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-09268377c2d4e5b71",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public private table"
            },
            "vpc_id": "vpc-034aa7bace1ed8b5b"
          },
          "dependencies": [
            "aws_eip.public_nat_ip",
            "aws_internet_gateway.playground_gateway",
            "aws_nat_gateway.public_nat",
            "aws_subnet.public",
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c74bb82b651db551",
            "owner_id": "777829610915",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0af31996e79a33d9f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public table"
            },
            "vpc_id": "vpc-034aa7bace1ed8b5b"
          },
          "dependencies": [
            "aws_internet_gateway.playground_gateway",
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_private_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a219910412dee75",
            "route_table_id": "rtb-0b716fb8f1baf5de0",
            "subnet_id": "subnet-0a7eea7d88a817a96"
          },
          "dependencies": [
            "aws_eip.public_nat_ip",
            "aws_internet_gateway.playground_gateway",
            "aws_nat_gateway.public_nat",
            "aws_route_table.public_private_table",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083033e88e870c3a8",
            "route_table_id": "rtb-0c74bb82b651db551",
            "subnet_id": "subnet-0c6dc3bc5f09ea7e9"
          },
          "dependencies": [
            "aws_internet_gateway.playground_gateway",
            "aws_route_table.public_table",
            "aws_subnet.public",
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_intraconnected",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:security-group/sg-03c8b28801fd386b8",
            "description": "allow things to talk to each other",
            "egress": [],
            "id": "sg-03c8b28801fd386b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.128.0/24",
                  "172.16.0.0/17"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 254
              },
              {
                "cidr_blocks": [
                  "172.16.128.0/24",
                  "172.16.0.0/17"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "172.16.128.0/24",
                  "172.16.0.0/17"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "private_intraconnected",
            "name_prefix": null,
            "owner_id": "777829610915",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-034aa7bace1ed8b5b"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_servers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:security-group/sg-03753e5e56b8a9fbb",
            "description": "security group associated with servers in the private subnet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03753e5e56b8a9fbb",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.128.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "172.16.128.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "private_servers",
            "name_prefix": null,
            "owner_id": "777829610915",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-034aa7bace1ed8b5b"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_servers",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:security-group/sg-0957160f0aa1f1d3a",
            "description": "access to bastions and other public servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0957160f0aa1f1d3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.16.0.0/17"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 254
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/17"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "172.16.0.0/17"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "73.78.216.54/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "73.78.216.54/32"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "73.78.216.54/32"
                ],
                "description": "",
                "from_port": 8089,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8089
              }
            ],
            "name": "public_servers",
            "name_prefix": null,
            "owner_id": "777829610915",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-034aa7bace1ed8b5b"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:subnet/subnet-0a7eea7d88a817a96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.0.0/17",
            "id": "subnet-0a7eea7d88a817a96",
            "map_public_ip_on_launch": false,
            "owner_id": "777829610915",
            "tags": {
              "Name": "private"
            },
            "vpc_id": "vpc-034aa7bace1ed8b5b"
          },
          "dependencies": [
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:subnet/subnet-0c6dc3bc5f09ea7e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.128.0/24",
            "id": "subnet-0c6dc3bc5f09ea7e9",
            "map_public_ip_on_launch": false,
            "owner_id": "777829610915",
            "tags": {
              "Name": "public"
            },
            "vpc_id": "vpc-034aa7bace1ed8b5b"
          },
          "dependencies": [
            "aws_vpc.devops_playground"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "devops_playground",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:777829610915:vpc/vpc-034aa7bace1ed8b5b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-026691845f430592e",
            "default_route_table_id": "rtb-08149075bff36e208",
            "default_security_group_id": "sg-06698e238aac1446e",
            "dhcp_options_id": "dopt-e60db983",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-034aa7bace1ed8b5b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08149075bff36e208",
            "owner_id": "777829610915"
          }
        }
      ]
    }
  ]
}